# C-OpenGL

./: .gitignore  CMakeLists.txt
shaders/: fragment.shader  vertex.shader
src/: Camera.cpp  Camera.h  Shader.cpp  Shader.h  main.cpp  utils.cpp  utils.h
